# backend

./: docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
cart/: admin.py  extras.py  models.py  serializers.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_order_owner.py
clinic/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
clinic/migrations/: 0001_initial.py  0002_alter_clinic_picture.py  0002_auto_20210925_1153.py
pet/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
pet/migrations/: 0001_initial.py  0002_auto_20210926_1709.py  0002_supplies.py  0003_alter_supplies_price.py  0004_alter_pet_price.py  0005_profile.py  0006_alter_profile_supplies.py  0007_alter_profile_supplies.py
petsProject/: asgi.py  settings.py  urls.py  views.py  wsgi.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_newuser_is_active.py  0002_alter_newuser_picture.py  0003_alter_newuser_address.py  0003_alter_newuser_is_active.py
