[tool.poetry]
name = "project401backend"
version = "0.1.0"
description = ""
authors = ["AbdullahELian1 <abodelian28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
Pillow = "^8.3.2"
django-phonenumber-field = "^5.2.0"
phonenumbers = "^8.12.33"
djangorestframework-simplejwt = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
